# GoQuant

./: CMakeLists.txt  README.md  main.cpp  websocket2  websocket2.cpp
Simulator/: TradeSimulator.cpp  TradeSimulator.h
WebSocket/: OKXWebSocket.cpp  OKXWebSocket.h
ui/: package-lock.json  package.json
ui/src/: App.css  App.jsx
ui/src/components/: InputPanel.jsx  OutputPanel.jsx
